--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
       "composer dump-autoload",
       "php bin/console make:migration",
       "php bin/console doctrine:migrations:migrate",
-      "php bin/console doctrine:fixtures:load"
+      "php bin/console doctrine:fixtures:load --append"
     ]
   },
   "minimum-stability": "dev",
