--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
       "php bin/console asset:install --symlink",
       "composer dump-autoload",
       "php bin/console make:migration",
-      "php bin/console doctrine:migrations:migrate",
-      "php bin/console doctrine:fixtures:load --append"
+      "php bin/console doctrine:migrations:migrate"
     ]
   },
   "minimum-stability": "dev",
