--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "AkyosCMS for Symfony - Form",
   "type": "symfony-bundle",
   "require": {
-    "php": "^7.2",
-    "beberlei/doctrineextensions": "^1.2"
+    "php": "^7.2"
   },
   "require-dev": {
   },
