--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
   ],
   "scripts": {
     "after-install-dependencies": [
-      "echo 'contact_form:' >> routes.yaml",
-      "echo '  resource: '../lib/FormBundle/Controller/'' >> routes.yaml",
-      "echo '  type:     annotation' >> routes.yaml,",
+      "echo 'contact_form:' >> config/routes.yaml",
+      "echo '  resource: '../lib/FormBundle/Controller/'' >> config/routes.yaml",
+      "echo '  type:     annotation' >> config/routes.yaml,",
       "php bin/console asset:install --symlink",
       "composer dump-autoload",
       "php bin/console make:migration",
