--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,10 @@
   ],
   "scripts": {
     "after-install-dependencies": [
+      "echo $'\n' >> config/routes.yaml",
       "echo 'contact_form:' >> config/routes.yaml",
-      "echo '  resource: '../lib/FormBundle/Controller/'' >> config/routes.yaml",
-      "echo '  type:     annotation' >> config/routes.yaml,",
+      "echo '    resource: \"../lib/FormBundle/Controller/\"' >> config/routes.yaml",
+      "echo '    type: annotation' >> config/routes.yaml",
       "php bin/console asset:install --symlink",
       "composer dump-autoload",
       "php bin/console make:migration",
