--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,28 @@
 {
   "name": "akyos/form-bundle",
-  "description": "AkyosCMS for Symfony - Form",
+  "description": "AkyosCMS for Symfony - Contact Form",
   "type": "symfony-bundle",
+  "license": "MIT",
+	"authors": [
+	    {
+	      "name": "Lilian Carneau",
+	      "email": "lilian@akyos.com"
+	    },
+	    {
+	      "name": "Thomas Sebert",
+	      "email": "thomas@akyos.com"
+	    },
+	    {
+	      "name": "Akyos Communication",
+	       "homepage": "https://akyos.com"
+	    }
+	],
   "require": {
     "php": ">=7.4",
     "karser/karser-recaptcha3-bundle": "^0.1.0@dev"
   },
   "require-dev": {
   },
-  "license": "proprietary",
-  "authors": [
-    {
-      "name": "Lilian Carneau",
-      "email": "lilian@akyos.com"
-    },
-    {
-      "name": "Johan JOULKVA",
-      "email": "johan@akyos.com"
-    },
-    {
-      "name": "Thomas Sebert",
-      "email": "thomas@akyos.com"
-    }
-  ],
   "scripts": {
     "after-install-dependencies": [
       "echo $'\n' >> config/routes.yaml",
